# Research-Agent

./: .gitignore  LICENSE  README.md  aria_config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
aria/: __init__.py
aria/agent/: __init__.py  core.py  tool_executor.py  tool_schemas.py
aria/cli/: __init__.py  db_commands.py  log_commands.py  main.py
aria/config/: __init__.py  loader.py
aria/models/: __init__.py  router.py
aria/monitor/: __init__.py  checker.py  notifier.py  scheduler.py
aria/outputs/: __init__.py  formatter.py
aria/storage/: __init__.py  db.py
aria/tools/: __init__.py  documents.py  financial.py  repo.py  web_search.py
queries/: monitor_summary.sql  outcome_accuracy.sql  recent_sessions.sql  sources_by_session.sql  stale_sessions.sql  unresolved_theses.sql
tests/: test_agent_loop_offline.py  test_config_and_prompt.py  test_db_commands.py  test_monitor.py  test_tool_executor.py  test_web_search.py
